исключил псевдоклассы, откорректировал раздел Products (изменения в index и css файлах)

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </section>
         <h3 class="headline title-trends">Сейчас в тренде <br class="underline"></h3>
         <section class="trends">
-            <article class="trends_article-trend trenda">
+            <article class="trends_article-trend trends_article-trend-odd trenda">
                 <div class="trends_article-text">
                     <ul class="trends_article-listtegs">
                         <li><a href="#0" class="trends_article-list-item"> lifestyle</a></li>
@@ -91,7 +91,7 @@
                     </h2>
                 </div>
             </article>
-            <article class="trends_article-trend trendb">
+            <article class="trends_article-trend trends_article-trend-even trendb">
                 <div class="trends_article-text">
                     <ul class="trends_article-listtegs">
                         <li><a href="#0" class="trends_article-list-item"> food</a></li>
@@ -103,7 +103,7 @@
                     </h2>
                 </div>
             </article>
-            <article class="trends_article-trend trendc">
+            <article class="trends_article-trend trends_article-trend-odd trendc">
                 <div class="trends_article-text">
                     <ul class="trends_article-listtegs">
                         <li><a href="#0" class="trends_article-list-item"> lifestyle</a></li>
@@ -116,7 +116,7 @@
                     </h2>
                 </div>
             </article>
-            <article class="trends_article-trend trendd">
+            <article class="trends_article-trend trends_article-trend-even trendd">
                 <div class="trends_article-text">
                     <ul class="trends_article-listtegs">
                         <li><a href="#0" class="trends_article-list-item"> food</a></li>
@@ -162,7 +162,7 @@
                             </div>
                         </div>
                     </article>
-                    <article class="news_article">
+                    <article class="news_article news_article-margin">
                         <a class="news_article-view" href="#">
                             <img src="https://netology-code.github.io/html-2-diploma/sources/images/last-post2.jpg"
                                  alt="Картинка девушка занимается йогой на пляже">
@@ -191,7 +191,7 @@
                             </div>
                         </div>
                     </article>
-                    <article class="news_article">
+                    <article class="news_article news_article-margin">
                         <a class="news_article-view" href="#">
                             <img src="https://netology-code.github.io/html-2-diploma/sources/images/last-post3.jpg"
                                  alt="Картинка человек на музыкальном фестивале">
@@ -222,7 +222,7 @@
                             </div>
                         </div>
                     </article>
-                    <article class="news_article">
+                    <article class="news_article news_article-margin">
                         <a class="news_article-view" href="#">
                             <img src="https://netology-code.github.io/html-2-diploma/sources/images/last-post4.jpg"
                                  alt="Картинка накрытый обеденный стол">
@@ -251,7 +251,7 @@
                             </div>
                         </div>
                     </article>
-                    <article class="news_article">
+                    <article class="news_article news_article-margin">
                         <a class="news_article-view" href="#">
                             <img src="https://netology-code.github.io/html-2-diploma/sources/images/last-post5.jpg"
                                  alt="Картинка подушки с принтом">
@@ -282,7 +282,7 @@
                             </div>
                         </div>
                     </article>
-                    <article class="news_article">
+                    <article class="news_article news_article-margin">
                         <a class="news_article-view" href="#">
                             <img src="https://netology-code.github.io/html-2-diploma/sources/images/last-post6.jpg"
                                  alt="Картинка люди на фоне горного массива">
@@ -311,7 +311,7 @@
                             </div>
                         </div>
                     </article>
-                    <article class="news_article">
+                    <article class="news_article news_article-margin">
                         <a class="news_article-view" href="#">
                             <img src="https://netology-code.github.io/html-2-diploma/sources/images/last-post4.jpg"
                                  alt="Картинка накрытый обеденный стол">
@@ -495,7 +495,7 @@
         </section>
         <h3 class="headline title-products">Наши изделия <br class="underline"></h3>
         <section class="products">
-            <article class="product_article">
+            <article class="product_article product_article-odd">
                 <div class="product_article-content">
                     <picture class="product_article-preview">
                         <source
@@ -521,6 +521,8 @@
                                 Набор из двух подушек с модными принтами. Видео о создании
                                 <a class="product_article-link" href="#0">здесь</a>.
                             </p>
+                            <br>
+                            <br>
                         </div>
                         <footer class="product_footer">
                             <span class="product_footer-price product">
@@ -535,7 +537,7 @@
                 </div>
             </article>
             <article class="product_article">
-                <div class="product_article-content">
+                <div class="product_article-content  product_article-content-even">
                     <picture class="product_article-preview">
                         <source
                                 media="(max-width: 360px) and (max-width: 767px)"
@@ -576,7 +578,7 @@
                     </div>
                 </div>
             </article>
-            <article class="product_article">
+            <article class="product_article product_article-odd">
                 <div class="product_article-content">
                     <picture class="product_article-preview">
                         <source
@@ -604,6 +606,7 @@
                                     <q class="quotes">Как сделать рамку из подручных средств за 30 минут</q>
                                 </a>
                             </p>
+                            <br>
                         </div>
                         <footer class="product_footer">
                             <span class="product_footer-price product">
